(PC-28047)[PRO] fix: wrap url when too long in signup journey

--- a/pro/src/screens/SignupJourneyForm/Validation/Validation.module.scss
+++ b/pro/src/screens/SignupJourneyForm/Validation/Validation.module.scss
@@ -26,12 +26,12 @@
 
     color: colors.$black;
     margin-bottom: rem.torem(8px);
+    overflow-wrap: break-word;
 
     &:last-child {
       margin-bottom: 0;
     }
   }
-
 }
 
 .validation-screen {
